infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modelium
  labels:
    name: modelium
    app: modelium
